# identifying-privacy-personas

./: .gitignore  ARTIFACT-EVALUATION.md  README.md  pyproject.toml
LICENSES/: THIRD-PARTY-LICENSES.md
dummy data/: feature_vector_generation_set_p_dummy.csv
dummy_data/: feature_vector_generation_set_p_prime_dummy.csv
ipp/: constants.py
ipp/steps/: step_1.py  step_2.R  step_3.py
scripts/: run.sh
